--- a/favorite.html
+++ b/favorite.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="/static/styles/save.css">
+<head>
+</head>
+<body>
 
-  </head>
+    {% for i in favorites %}
 
-  <body>
-    i luh u bbg
-  </body>
-  
+      <img src ="{{i}}">
+
+    {% endfor %}
+
+
+</body>
