--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
             <div class ="zoom"> <div class="container">
             <img src="https://brinkleyglenn.files.wordpress.com/2014/03/img_9278.jpg" width=400 height=400 class="image">
-            img1 = "https://brinkleyglenn.files.wordpress.com/2014/03/img_9278.jpg"
-            <div class="middle"> <form id="logoutBtn" action="/favorite">
+            <div class="middle"> <form id="logoutBtn" action="/favorite" method="POST">
                <div class="text">Lemonade -- info</div>
+               <input type="text" class="imageInput" value="https://brinkleyglenn.files.wordpress.com/2014/03/img_9278.jpg"  name="imagename">
                <input type="submit" value="save" class="button">
               </form>
               </div>
